--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,7 +65,8 @@ nav:
       - How-To - Deploy loxilb with multi-AZ HA support in AWS: aws-multi-az.md
       - How-To - Deploy loxilb with multi-cloud HA support: multi-cloud-ha.md
       - How-To - Deploy loxilb with ingress-nginx: loxilb-nginx-ingress.md
-      - How-To - Deploy loxilb in-cluster for multus based secondary services: loxilb-incluster-multus.md 
+      - How-To - Deploy loxilb in-cluster for multus based secondary services: loxilb-incluster-multus.md
+      - How-To - Kubernetes virtual cluster setup with k3k and loxilb: k3k-virtual-cluster.md
   - Knowledge Base:
       - What is eBPF: ebpf.md
       - What is k8s service - load-balancer: lb.md
