--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,8 +54,8 @@ nav:
           - EKS/loxilb in-cluster mode: eks-incluster.md
           - RedHat OCP/loxilb in-cluster mode: rhocp-quickstart-incluster.md
       - Service-Proxy Mode:
-          - K3s/loxilb service-proxy with flannel: service-proxy-flannel.md
-          - K3s/loxilb service-proxy with calico: service-proxy-calico.md
+          - loxilb service-proxy plugin with flannel: service-proxy-flannel.md
+          - loxilb service-proxy plugin with calico: service-proxy-calico.md
       - Kubernetes Ingress Mode:
           - k3s/Run loxilb-ingress: loxilb-ingress.md
       - Standalone Mode: standalone.md
