--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,8 @@ nav:
           - loxilb service-proxy plugin with calico: service-proxy-calico.md
       - Kubernetes Ingress Mode:
           - k3s/Run loxilb-ingress: loxilb-ingress.md
+      - Kubernetes Egress Mode:
+          - Run loxilb as Kubernetes Egress: loxilb-egress.md
       - Standalone Mode: standalone.md
   - Advanced Guides:
       - How-To - service-group zones: service-zones.md
